<resources>
    <string name="app_name">PruebaRetroFit</string>
    <!--Main Activity-->
    <string name="user">Usuario: </string>
    <string name="txtUser">Introduce nombre de usuario</string>
    <string name="password">Contraseña: </string>
    <string name="txtPassword">Introduce la contraseña</string>
    <string name="btnAccept">Iniciar sesión</string>

    <!--SingIn Activity-->
    <string name="greeting">¡BIENVENID@!</string>
    <string name="txUserName"></string>
    <string name="btnCloseSesion">Cerrar Sesión</string>
</resources>